--- a/reference/common/schemas/h-tt-pvalidation-error.yaml
+++ b/reference/common/schemas/h-tt-pvalidation-error.yaml
@@ -5,4 +5,5 @@ properties:
       $ref: ../schemas.yaml#/ValidationError
     type: array
     title: Detail
+    description: Szczegółowa informacja na temat błędu
 title: HTTPValidationError
