--- a/reference/common/schemas/krz-subsection-enum.yaml
+++ b/reference/common/schemas/krz-subsection-enum.yaml
@@ -8,11 +8,11 @@ enum:
 - 32
 type: integer
 description: |-
-  Rozdział MSiG
+  Subsekcja KRZ
   <details>
     <summary>Pokaż możliwe opcje</summary>
 
-    | Wartość | Nazwa rozdziału |
+    | Wartość | Nazwa subsekcji |
     |-|-|
     | `0` | Obwieszczenie o ustaleniu dnia układowego |
     | `1` | Obwieszczenie zarządzenia o wpisaniu do repertorium wniosku restrukturyzacyjnego |
