--- a/reference/common/schemas/update-monitors-model.yaml
+++ b/reference/common/schemas/update-monitors-model.yaml
@@ -5,12 +5,13 @@ example:
 type: object
 properties:
   emails:
-    default: []
     items:
       type: string
     type: array
     title: Emails
+    description: Adresy e-mail do wysyłki powiadomień z monitoringów
   filter_id:
     type: string
     title: Filter Id
+    description: Identyfikator filtra wykorzystanego do utworzenia monitoringu
 title: UpdateMonitorsModel
