--- a/reference/common/schemas/user-model.yaml
+++ b/reference/common/schemas/user-model.yaml
@@ -17,21 +17,27 @@ properties:
     format: date-time
     type: string
     title: Creation Datetime
+    description: Data wygasania konta użytkownika
   is_active:
     type: boolean
     title: Is Active
+    description: Czy użytkownik jest aktywny?
   email:
     format: email
     type: string
     title: Email
+    description: Adres e-mail użytkownika
   is_admin:
     type: boolean
     title: Is Admin
+    description: Czy użytkownik jest adminem?
   deactivation_datetime:
     format: date-time
     type: string
     title: Deactivation Datetime
+    description: Data wygasania konta użytkownika
   id:
     type: string
     title: Id
+    description: Unikalny identyfikator użytkownika
 title: UserModel
