--- a/reference/common/schemas/info-reports.yaml
+++ b/reference/common/schemas/info-reports.yaml
@@ -6,7 +6,9 @@ properties:
   id:
     type: integer
     title: Id
+    description: Unikalny identyfikator
   label:
     type: string
     title: Label
+    description: Etykieta
 title: InfoReports
