--- a/reference/common/schemas/krz-section-ban-enum.yaml
+++ b/reference/common/schemas/krz-section-ban-enum.yaml
@@ -3,11 +3,14 @@ enum:
 - 41
 type: integer
 description: |-
-  Rozdział MSiG
+  Sekcja KRZ
+
   <details>
     <summary>Pokaż możliwe opcje</summary>
 
-    | Wartość | Nazwa rozdziału |
+    <b>Zakaz prowadzenia działalności gospodarczej</b>
+
+    | Wartość | Nazwa sekcji |
     |-|-|
     | `40` | Orzeczenie zakazu prowadzenia działalności gospodarczej |
     | `41` | Inne |</details>
