--- a/reference/common/schemas/msig-section-restructuring-enum.yaml
+++ b/reference/common/schemas/msig-section-restructuring-enum.yaml
@@ -32,11 +32,11 @@ enum:
 - 50
 type: integer
 description: |-
-  Rozdział MSiG
+  Sekcja MSiG
   <details>
     <summary>Pokaż możliwe opcje</summary>
 
-    | Wartość | Nazwa rozdziału |
+    | Wartość | Nazwa sekcji |
     |-|-|
     | `20` | Dokonanie zmian w spisie wierzytelności |
     | `21` | Inne |
