--- a/reference/common/schemas/update-filters-model.yaml
+++ b/reference/common/schemas/update-filters-model.yaml
@@ -2,7 +2,9 @@ type: object
 properties:
   content:
     $ref: ../schemas.yaml#/StrictContentFiltersModel
+    description: Zawartość filtra
   name:
     type: string
     title: Name
+    description: Nazwa filtra
 title: UpdateFiltersModel
