--- a/reference/common/schemas/update-user-model.yaml
+++ b/reference/common/schemas/update-user-model.yaml
@@ -7,11 +7,14 @@ properties:
   is_admin:
     type: boolean
     title: Is Admin
+    description: Czy użytkownik jest adminem?
   is_active:
     type: boolean
     title: Is Active
+    description: Czy użytkownik jest aktywny?
   email:
     format: email
     type: string
     title: Email
+    description: Adres e-mail użytkownika
 title: UpdateUserModel
