--- a/reference/ins_api/paths/announcement-by-id-v2-announcements-id-GET.yaml
+++ b/reference/ins_api/paths/announcement-by-id-v2-announcements-id-GET.yaml
@@ -41,6 +41,7 @@ parameters:
 - required: true
   in: path
   name: id
+  description: Unikalny identyfikator ogłoszenia
   schema:
     type: string
     title: Id
@@ -48,6 +49,7 @@ parameters:
   in: header
   example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
   name: Authorization
+  description: Klucz autoryzacji
   schema:
     type: string
     title: Authorization
