--- a/reference/ins_api/paths/create-filter-v2-filters-POST.yaml
+++ b/reference/ins_api/paths/create-filter-v2-filters-POST.yaml
@@ -40,6 +40,7 @@ parameters:
   in: header
   example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
   name: Authorization
+  description: Unikalny identyfikator filtra
   schema:
     type: string
     title: Authorization
