--- a/reference/ins_api/paths/download-report-by-id-v2-reports-report-id-download-GET.yaml
+++ b/reference/ins_api/paths/download-report-by-id-v2-reports-report-id-download-GET.yaml
@@ -37,6 +37,7 @@ parameters:
 - required: true
   in: path
   name: report_id
+  description: Unikalny identyfikator raportu
   schema:
     anyOf:
     - type: string
@@ -48,6 +49,7 @@ parameters:
   in: header
   example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
   name: Authorization
+  description: Klucz autoryzacji
   schema:
     type: string
     title: Authorization
