--- a/reference/ins_api/paths/monitors-v2-monitors-DELETE.yaml
+++ b/reference/ins_api/paths/monitors-v2-monitors-DELETE.yaml
@@ -31,6 +31,7 @@ parameters:
 - required: false
   in: query
   name: ids
+  description: Unikalny identyfikator monitoringu
   schema:
     type: string
     title: Ids
@@ -38,6 +39,7 @@ parameters:
   in: header
   example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
   name: Authorization
+  description: Klucz autoryzacji
   schema:
     type: string
     title: Authorization
