--- a/reference/ins_api/paths/reports-v2-reports-DELETE.yaml
+++ b/reference/ins_api/paths/reports-v2-reports-DELETE.yaml
@@ -43,6 +43,7 @@ parameters:
   in: header
   example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
   name: Authorization
+  description: Klucz autoryzacji
   schema:
     type: string
     title: Authorization
