--- a/reference/ins_api/paths/user-filter-by-id-v2-filters-id-GET.yaml
+++ b/reference/ins_api/paths/user-filter-by-id-v2-filters-id-GET.yaml
@@ -41,6 +41,7 @@ parameters:
 - required: true
   in: path
   name: id
+  description: Unikalny identyfikator filtra
   schema:
     anyOf:
     - type: string
@@ -52,6 +53,7 @@ parameters:
   in: header
   example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
   name: Authorization
+  description: Klucz autoryzacji
   schema:
     type: string
     title: Authorization
