--- a/reference/ins_api/paths/user-filters-v2-filters-id-PATCH.yaml
+++ b/reference/ins_api/paths/user-filters-v2-filters-id-PATCH.yaml
@@ -33,6 +33,7 @@ parameters:
 - required: true
   in: path
   name: id
+  description: Unikalny identyfikator filtra
   schema:
     type: string
     title: Id
@@ -40,6 +41,7 @@ parameters:
   in: header
   example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
   name: Authorization
+  description: Klucz autoryzacji
   schema:
     type: string
     title: Authorization
